// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Props - Size Should render a 'p' tag with a 'align' prop 1`] = `
.c0 {
  font-family: "Inter",sans-serif;
  font-weight: normal;
  color: #000;
  text-align: center;
  font-size: 16px;
}

<p
  align="center"
  class="c0"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'color' prop 1`] = `
.c0 {
  font-family: "Inter",sans-serif;
  font-weight: normal;
  color: red;
  text-align: left;
  font-size: 16px;
}

<p
  class="c0"
  color="red"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'size' prop 1`] = `
.c0 {
  font-family: "Inter",sans-serif;
  font-weight: normal;
  color: #000;
  text-align: left;
  font-size: 16px;
}

<p
  class="c0"
  data-testid="core-text-variant-p"
>
  Hello
</p>
`;

exports[`Text Props - Size Should render a 'p' tag with a 'weight' prop 1`] = `
.c0 {
  font-family: "Inter",sans-serif;
  font-weight: bold;
  color: #000;
  text-align: left;
  font-size: 16px;
}

<p
  class="c0"
  data-testid="core-text-variant-p"
  weight="bold"
>
  Hello
</p>
`;
